--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "_from": "@electron/get@^1.0.1",
-  "_id": "@electron/get@1.14.1",
   "_inBundle": false,
   "_integrity": "sha512-BrZYyL/6m0ZXz/lDxy/nlVhQz+WF+iPS6qXolEU8atw7h6v1aYkjwJZ63m+bJMBTxDE66X+r2tPS4a/8C82sZw==",
   "_location": "/@electron/get",
@@ -23,16 +22,13 @@
   "_shasum": "16ba75f02dffb74c23965e72d617adc721d27f40",
   "_spec": "@electron/get@^1.0.1",
   "_where": "D:\\manel\\code\\node_modules\\electron",
-  "author": {
-    "name": "Samuel Attard"
-  },
+  "author": "Samuel Attard",
   "bugs": {
     "url": "https://github.com/electron/get/issues"
   },
-  "bundleDependencies": false,
   "dependencies": {
     "debug": "^4.1.1",
-    "electron": "^10.0.0",
+    "electron": "10.0.0",
     "env-paths": "^2.2.0",
     "fs-extra": "^8.1.0",
     "global-agent": "^3.0.0",
@@ -112,7 +108,7 @@
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "name": "@electron/get",
+  "name": "test-app",
   "optionalDependencies": {
     "global-agent": "^3.0.0",
     "global-tunnel-ng": "^2.7.1"
